--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -179,3 +179,11 @@ img {
 h1 {
   text-box: trim-both cap alphabetic;
 }
+
+
+.masonry-container {
+  display: grid-lanes;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  // grid-template-columns: repeat(auto-fill, minmax(8rem, 1fr) minmax(16rem, 2fr)) minmax(8rem, 1fr);
+  gap: 16px;
+}
