:sparkles: feat: 功能优化

--- a/.vitepress/theme/styles/variables.scss
+++ b/.vitepress/theme/styles/variables.scss
@@ -1,4 +1,5 @@
 $app-font-family:
+  MapleMono,
   /* 1. 你的首选Web字体 */ 'Noto Sans SC Variable',
   /* 2. 苹果系统（macOS, iOS）的优质中文字体 */ 'PingFang SC',
   'Hiragino Sans GB',
