--- a/.vitepress/theme/styles/vitepress-variables.scss
+++ b/.vitepress/theme/styles/vitepress-variables.scss
@@ -28,6 +28,17 @@
   --view-transition-new-zindex: 9999;
 }
 
+:root {
+  --color-1: oklch(0.82 0.08 285);
+  --color-2: oklch(0.85 0.08 300);
+  --color-3: oklch(0.88 0.06 320);
+  --color-4: oklch(0.86 0.09 340);
+  --color-5: oklch(0.85 0.1 350);
+  --color-6: oklch(0.87 0.07 10);
+  --color-7: oklch(0.88 0.05 220);
+  --color-8: oklch(0.85 0.07 240);
+}
+
 /**
    * Component: Button
    * -------------------------------------------------------------------------- */
