--- a/.vitepress/theme/styles/index.scss
+++ b/.vitepress/theme/styles/index.scss
@@ -118,8 +118,8 @@ body::after {
 }
 
 :root {
-
-  --base-blue: oklch(var(--base-blue-l) var(--base-blue-c) var(--base-blue-h));
+  // --base-blue: oklch(var(--base-blue-l) var(--base-blue-c) var(--base-blue-h));
+  --base-blue: oklch(0.836 0.112 252.0);
   --base-blue-text-contrast: oklch(calc(var(--base-blue-l) > 50% ? 10% : 90%) 0 0);
   /* 文本颜色根据背景明度动态调整 */
   --base-blue-hover: oklch(calc(var(--base-blue-l) + 5%) var(--base-blue-c) var(--base-blue-h));
